# minpartydistance

./: .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE  README.md  benchmark.R  build  install_packages.sh  performance_test.R
.devcontainer/: devcontainer.json
R/: extendr-wrappers.R
man/: mean_min_abs_distance.Rd  mean_min_abs_distance_mc_batch.Rd  mean_min_abs_distance_midpoints.Rd
script/: build  lint  setup  test
src/: Makevars.in  Makevars.win.in  MinPartyDistance-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: benchmark.R
