[package]
name = 'min_party_distance'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'MinPartyDistance'

[dependencies]
extendr-api = '0.8'
statrs = '0.16'

[profile.release]
opt-level = 3           # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = 'abort'        # Smaller binary size
overflow-checks = false # Faster arithmetic (assumes no overflow)
