[package]
name = 'min_party_distance'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'minPartyDistance'

[dependencies]
extendr-api = '0.8'
statrs = '0.16'
wide = '0.7'
rand = '0.8'
rand_chacha = '0.3'
rand_distr = '0.4'

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Link-time optimization
codegen-units = 1      # Better optimization at cost of compile time
panic = 'abort'        # Smaller binary size
overflow-checks = false # Faster arithmetic (assumes no overflow)
